--- a/templates/page/ajoutPersonne.html.twig
+++ b/templates/page/ajoutPersonne.html.twig
@@ -10,6 +10,7 @@
         <h1>ajouter une personne</h1>
         <hr>
         <div class="container-fluid">
+          {{form(personneForm)}}
 
        </div>
       </div>
