--- a/templates/page/modifierPersonne.html.twig
+++ b/templates/page/modifierPersonne.html.twig
@@ -7,14 +7,11 @@
 <div class="container-fluid">
     <div class="col-lg-8 mx-auto shadow py-5">
       <div class="row py-4">
-        <h2>Modifier une Personne!</h2>
+        <h1>Modifier une personne</h1>
         <hr>
         <div class="container-fluid">
+          {{form(modifierForm)}}
 
-         {{form(personneForm)}}
-         
-        
-     
        </div>
       </div>
     </div>
